# cheri_misidioms

./: .gitignore  Makefile  README.md  cheri_misidioms.ltx  cheri_misidioms_preamble.ltx  local.bib  softdev.sty
Presentation/: ISMM23.odp
Presentation/images/: CWEs.xcf
arXiv/: bparser.py  cheri_misidioms.ltx  lstlinebgrd.sty  prep_tar.sh  softdev.sty
arXiv/code/: bump_alloc1.c  bump_alloc2.c  bump_alloc_lib.c  escinauthentic.c  escperms.c  narrow_widen.c  narrow_widen_cap_leak.c  overlap.c  test_bump_alloc1.c  test_bump_alloc2.c  undef.c  validate.c
arXiv/data/results/: slocs.tex  tests.tex
code/: .gitignore  COPYRIGHT  Makefile.inc  Makefile.morello-purecap  Makefile.riscv64-purecap  api-equiv.pl  bump_alloc.c  bump_alloc1.c  bump_alloc2.c  bump_alloc_lib.c  escbounds.c  escperms.c  escunauthentic.c  narrow.c  narrow_realloc.c  narrow_widen.c  narrow_widen_cap_leak.c  overlap.c  overlap2.c  overlap3.c  parse-llvm-defs.pl  privesc.c  privesc2.c  reappearing.c  test_bump_alloc1.c  test_bump_alloc2.c  undef.c  unrepresentable_length.c  validate.c
code/api-equiv/builtins/: api-equiv.builtins.toml
code/api-equiv/cheric/: api-equiv.cheric.toml
code/api-equiv/cheriintrin/: api-equiv.cheriintrin.toml
code/attacks-xalloc/: Makefile.morello-purecap  escbounds.c  escperms.c  make_xalloc.sh  narrow_widen.c  overlap.c  undef.c  xalloc.h  xalloc_front.h
code/attacks2/: Makefile.inc  escbounds.c  escperms.c  narrow_widen.c  overlap.c
code/benchmarks/: CMakeLists.txt  COPYRIGHT  morello-hybrid.cmake  morello-purecap.cmake
code/benchmarks/barnes/: CMakeLists.txt  code.c  code_io.c  getparam.c
code/benchmarks/binary_tree/: CMakeLists.txt  binary_tree.c
code/benchmarks/cfrac/: CMakeLists.txt  cfrac.c  pcfrac.c  pdefs.h  pops.c  precision.h  ptoa.c
code/benchmarks/espresso/: CMakeLists.txt  main.c  utility.h
code/benchmarks/glibc-bench/: CMakeLists.txt  bench-malloc-simple.c  bench-malloc-thread.c
code/benchmarks/misc/: bench_harness.h  harness.c
code/benchmarks/mstress/: CMakeLists.txt  mstress.c
code/benchmarks/richards/: CMakeLists.txt  richards.c
code/fvp-analyses/: 2023-02-24-purecap-binary_tree.analysis  2023-02-27-hybrid-binary_tree.analysis  2023-03-01-hybrid-richards-1.analysis  2023-03-01-purecap-richards-1.analysis  2023-03-03-hybrid-mstress-4-50-1.analysis  2023-03-03-purecap-mstress-4-50-1.analysis  2023-04-28T12:23+00:00-hybrid-binary-tree.analysis  2023-04-28T12:23+00:00-purecap-binary-tree.analysis  2023-05-01T19:03+00:00-hybrid-mstress-4-50-1.analysis  2023-05-01T19:03+00:00-purecap-mstress-4-50-1.analysis  2023-05-02T09:54+00:00-hybrid-richards-1.analysis  2023-05-02T09:54+00:00-purecap-richards-1.analysis  README  collate.pl  insn-report.pl  plot.r
code/microbenchmarks/: .gitignore  00-factorial-asm-minimal.c  01-factorial-asm-indirect.c  10-random-graph-walk-l1.c  11-random-graph-walk-fixed.c  20-so-call.c  21-global.c  22-global-other-so.c  30-ptr-add-asm.c  31-ptr-add-align.c  99-busy-loop.c  README.md  build.sh  cli.h  plot.sh  random-graph-walk.h  results.csv  run-fast-fvp-trace.sh  run-remote.sh
code/microbenchmarks/lib/: global.c  nop.c
code/tarmac-tools/: Cargo.toml  README.md
data/: Dockerfile  README.md  apis.json  cmds  config.json  get_all.py  get_data.py  graphplot.py  parse_statics.py  requirements.txt  slocs.template
data/allocators/ElectricFence/: info.json  info.json.skip
data/allocators/bump_alloc/: ba.tar  build.sh  info.json
data/allocators/bump_alloc_cheri/: build.sh  info.json
data/allocators/bump_alloc_nocheri/: build.sh  info.json
data/allocators/dlmalloc_cheribuild/: build.sh  info.json
data/allocators/dlmalloc_pkg64c/: info.json
data/allocators/dmalloc/: info.json
data/allocators/jemalloc/: info.json
data/allocators/libmalloc_simple/: info.json
data/allocators/libxalloc/: info.json
data/allocators/musl-huawei/: info.json.skip
data/allocators/musl-morello/: build.sh  info.json  info.json.skip
data/allocators/newlib/: build.sh  info.json  info.json.skip
data/allocators/ptmalloc/: info.json
data/allocators/snmalloc_cheribuild/: build.sh  info.json
data/allocators/snmalloc_repo/: build.sh  info.json
data/port_data/: mk_port_table.py  snmalloc.diff  snmalloc.json  snmalloc_cheri_api
data/results/: cheri_api.tex  slocs.tex  tests.tex  tests_extra.tex
fig/: jemalloc_bm_overall.json  jemalloc_snmalloc_bm_overall.json  snmalloc_speedups.json
fig/instruction_mix/: bar_chart.py  counts.csv
listings/: bump_alloc1.c  bump_alloc2.c
